<resources>
    <string name="app_name" >The game of 31</string>
    <string name="title_activity_level">Level Activity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" >Settings</string>
    <string name="score_text">Your Score 0</string>
    <string name="score">اScore</string>
    <string name="your_score">Your Score</string>
    <string name="your_score_is">Your Score is </string>
    <string name="points">Points </string>
    <string name="next_level">Level Opened</string>
    <string name="num_of_levels_win">You Win </string>
    <string name="excelent" >Excelent !</string>
    <string name="training">Training</string>
    <string name="play_online">Play Online</string>
    <string name="title_section1">Your Profile</string>
    <string name="title_section2">Play With Facebook</string>
    <string name="title_section3">Play Randomly</string>
    <string name="logout">Logout</string>
    <string name="play_with_random_player">Play With Random Player !</string>
    <string name="search">Search</string>
    <string name="inviteRandomPlayer">Invite</string>
    <string name="edit_your_informations">Edit Your Informations</string>
    <string name="edit_your_user_name">Edit Your User Name</string>
    <string name="edit_your_password">Edit Your Password</string>
    <string name="edit_your_email">Edit Your Email</string>
    <string name="error_user_name">at least 3 characters</string>
    <string name="ok_dialog">OK</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="error_password">between 4 and 20 alphanumeric characters</string>
    <string name="error_email">enter a valid email address</string>
    <string name="game_name">The Game Of 31</string>
    <string name="you_win">You win !!</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_lose">You can make it, try again !</string>
    <string name="Unfor">Unfortunatly</string>

    <string name="game_over">Game over</string>
    <string name="you_win_first_half"> win in the first half !!</string>
    <string name="you_lose_first_half"> lose in the first half !!</string>
    <string name="you_lose_second_half">You lose in the second half !!</string>
    <string name="you_win_second_half">You win in the second half !!</string>
    <string name="final_result">Final Result</string>
    <string name="equalizing">Equalizing</string>
    <string name="you_win_game">You win in this game !</string>
    <string name="you_lose_game">You lose in this game !</string>

    <string name="your_new_score">Your new score is </string>
    <string name="authenticating">Authenticating...</string>
    <string name="login_failed">Login failed , check network connection , or you loged in by another device</string>
    <string name="enter_user_name">enter a User Name </string>
    <string name="login_success">Login success!!</string>
    <string name="playeing_with_other_player"> is playing with other player !</string>
    <string name="didnot_accept_play"> did not accept the play request !!</string>
    <string name="edited">Edited !</string>
    <string name="try_later_again">Oops, please try later again</string>
    <string name="your_profile">Your Profile</string>
    <string name="play_with_facebook">Play With Facebook</string>
    <string name="play_randomly">Play Randomly</string>
    <string name="wants_to_play_with_you"> wants to play with you ?!</string>
    <string name="yes_dialog">YES</string>
    <string name="signup_failed">sign up failed!!</string>
    <string name="signup_success">sign up success!!</string>
    <string name="is_escaped_from_this_game"> is escaped from this game !!</string>
    <string name="no_dialog">NO</string>
    <string name="search_again">Search Again !</string>
    <string name="creating_account">Creating Account...</string>
    <string name="display_info">Display Informations</string>
    <string name="edit">Edit</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="your_userName">Your user Name</string>
    <string name="userName">User Name</string>
    <string name="login">Login</string>
    <string name="signup"> Signup </string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="already_member">Already a member? Login</string>
    <string name="check_internet">Check internet connection and try again</string>
</resources>
