<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FragmentRandom"
    android:background="@drawable/profile">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_with_random_player"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="searchRandomUser"/>

    </LinearLayout>

    <!--we need background -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userNameOfRandomPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="30dp"
            android:visibility="invisible"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnInviteRandomPlayer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inviteRandomPlayer"
            android:onClick="inviteBtn"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>