<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FragmentProfile"
    android:id="@+id/content"
    android:background="@drawable/profile">



    <Button
        android:id="@+id/display_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_info"
        android:layout_gravity="center"
        android:onClick="displayBtn"
        android:layout_marginTop="30dp"/>


    <LinearLayout
        android:id="@+id/info_layout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!--user name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your_user_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_userName"/>
        <TextView
            android:id="@+id/profile_user_name_id"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                android:id="@+id/edit_user_name_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:onClick="btnEditUserName"
                />
        </LinearLayout>
    </LinearLayout>

    <!--password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your_pw_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password"/>
        <TextView
            android:id="@+id/pw_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                android:id="@+id/edit_pw_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:onClick="btnEditPassword"
                />
        </LinearLayout>
    </LinearLayout>




    <!--email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your_email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email"/>
        <TextView
            android:id="@+id/email_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                android:id="@+id/edit_email_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:onClick="btnEditEmail"
                />
        </LinearLayout>
    </LinearLayout>



    <!--score-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your_score_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"/>
        <TextView
            android:id="@+id/score_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:textStyle="italic"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>


    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Logout"
    android:textSize="20dp"
    android:layout_gravity="center"
    android:onClick="logoutBtn"
    />

</LinearLayout>
</ScrollView>